server/compilers/goLiteJS/src/test/ml2/valid/ml2shortdec1.go
package main

var a int
var b float64
var c bool
var d rune
var e string
type da int
var h struct {
	da  int
	das da
}
func main() {
	print("dasda")
	//a++;
	var s string = "\r\t 		"

}

var s string = "string \n newline"

func sas() {
	var as string = "asdas \n asdas"
	print(as)
}
