server/compilers/goLiteJS/src/test/ml2/invalid/ml2decl1top.go
package main

var a,b,c int
var (
    a,b,c int
    b float64
)
var int float64
var a int

type as int

type gs as

type as gs
type (
    as int
    gs float64

)
func a() bool {
	var a int = 5



}
